--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
 
     </h1>
 
-    <!-- calculate -->
+    <!-- main part -->
     <div class="container mt-5 opacity">
         <div class="row">
-            <!-- image -->
+            <!-- image of background-->
             <div class="col-sm-12 col-md-12 col-lg-8 mb-5">
                 <div class="card">
                     <div class="card-body">
@@ -27,12 +27,12 @@
                     </div>
                 </div>
             </div>
-            <!-- calculate -->
+            <!-- calculate starts-->
             <div class="col-sm-12 col-md-12 col-lg-4 mb-3">
                 <div class="card">
                     <div class="card-body">
                         <div class="container">
-                            <!-- income -->
+                            <!-- income input-->
                             <section>
                                 <h3 class="text-center">Income</h3>
                                 <div class="input-group">
@@ -43,10 +43,10 @@
                                         aria-label="Sizing example input" aria-describedby="inputGroup-sizing-lg" />
                                 </div>
                             </section>
-                            <!-- expenses -->
+                            <!-- expenses  part-->
                             <section>
                                 <h3 class="text-center mt-5">Expenses</h3>
-                                <!-- food -->
+                                <!-- food input -->
                                 <div class="input-group mb-3">
                                     <span style="width: 100px" class="input-group-text" id="inputGroup-sizing-default">
                                         Food</span>
@@ -54,7 +54,7 @@
                                         aria-label="Sizing example input"
                                         aria-describedby="inputGroup-sizing-default" />
                                 </div>
-                                <!-- rent -->
+                                <!-- rent input -->
                                 <div class="input-group mb-3">
                                     <span style="width: 100px" class="input-group-text" id="inputGroup-sizing-default">
                                         Rent</span>
@@ -62,7 +62,7 @@
                                         aria-label="Sizing example input"
                                         aria-describedby="inputGroup-sizing-default" />
                                 </div>
-                                <!-- clothes -->
+                                <!-- clothes input -->
                                 <div class="input-group mb-3">
                                     <span style="width: 100px" class="input-group-text"
                                         id="inputGroup-sizing-default">Clothes</span>
@@ -70,12 +70,12 @@
                                         aria-label="Sizing example input"
                                         aria-describedby="inputGroup-sizing-default" />
                                 </div>
-                                <!-- calculate button -->
+                                <!-- calculation button -->
                                 <button id="calculate-btn" type="button" class="btn btn-success">
 
                                     Calculate
                                 </button>
-                                <!--calculation result  -->
+                                <!--calculation result of expenses  -->
                                 <div class="mt-3">
                                     <h5>
                                         Total Expenses: <span id="total-expenses">0.00</span>
@@ -98,7 +98,7 @@
                                     </button>
                                 </div>
                             </section>
-                            <!-- savings and remaining -->
+                            <!-- get savings amount and remaining amount -->
                             <section class="mt-2">
                                 <h5>Savings Amount: <span id="saving-amount">0.00</span></h5>
                                 <h5>Remaining Balance: <span id="remain-after-saving">0.00</span></h5>
