--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Solid Personal Banking WebPage</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 </head>
@@ -19,7 +19,7 @@
     <!-- main part -->
     <div class="container mt-5 opacity">
         <div class="row">
-            <!-- image of background-->
+            <!-- left side background image-->
             <div class="col-sm-12 col-md-12 col-lg-8 mb-5">
                 <div class="card">
                     <div class="card-body">
@@ -27,7 +27,7 @@
                     </div>
                 </div>
             </div>
-            <!-- calculate starts-->
+            <!-- calculation starts-->
             <div class="col-sm-12 col-md-12 col-lg-4 mb-3">
                 <div class="card">
                     <div class="card-body">
@@ -71,7 +71,7 @@
                                         aria-describedby="inputGroup-sizing-default" />
                                 </div>
                                 <!-- calculation button -->
-                                <button id="calculate-btn" type="button" class="btn btn-success">
+                                <button id="calculate-btn" type="button" class="btn btn-primary ">
 
                                     Calculate
                                 </button>
@@ -93,7 +93,7 @@
                                         aria-describedby="inputGroup-sizing-default" />
                                     <span class="ms-3 align-items-center fs-4 d-inline">%
                                     </span>
-                                    <button id="save-btn" class="btn btn-success ms-3 rounded-3">
+                                    <button id="save-btn" class="btn btn-primary ms-3 rounded-4">
                                         Save
                                     </button>
                                 </div>
@@ -107,12 +107,14 @@
                     </div>
                 </div>
             </div>
+            <!-- calculation ends -->
         </div>
     </div>
-    <!-- javascript part-->
+    <!-- bootstrap script tag-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
         crossorigin="anonymous"></script>
+    <!-- javascript file -->
     <script src="js/app.js"></script>
 </body>
 
