--- a/index.html
+++ b/index.html
@@ -76,11 +76,12 @@
                                     Calculate
                                 </button>
                                 <!--calculation result of expenses  -->
-                                <div class="mt-3">
-                                    <h5>
+                                <div class="mt-3 ">
+                                    <h5 class="d-flex justify-content-center">
                                         Total Expenses: <span id="total-expenses">0.00</span>
                                     </h5>
-                                    <h5>Balance: <span id="total-balance">0.00</span></h5>
+                                    <h5 class="d-flex justify-content-center">Balance: <span
+                                            id="total-balance">0.00</span></h5>
                                 </div>
                             </section>
                             <!-- savings part -->
@@ -100,8 +101,10 @@
                             </section>
                             <!-- get savings amount and remaining amount -->
                             <section class="mt-2">
-                                <h5>Savings Amount: <span id="saving-amount">0.00</span></h5>
-                                <h5>Remaining Balance: <span id="remain-after-saving">0.00</span></h5>
+                                <h5 class="d-flex justify-content-center">Saving Amount: <span
+                                        id="saving-amount">0.00</span></h5>
+                                <h5 class="d-flex justify-content-center">Remaining Balance: <span
+                                        id="remain-after-saving">0.00</span></h5>
                             </section>
                         </div>
                     </div>
